# Sub0Pipeline

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLATFORM_ROADMAP.md  README.md  STYLE_GUIDE.md
.claude/: settings.json
cmake/: Sub0PipelineConfig.cmake.in
examples/: CMakeLists.txt
examples/boot_sequence/: CMakeLists.txt  main.cpp
examples/dsl_operators/: CMakeLists.txt  main.cpp
examples/minimal_pipeline/: CMakeLists.txt  main.cpp
examples/on_demand_jobs/: CMakeLists.txt  main.cpp
examples/parallel_tasks/: CMakeLists.txt  main.cpp
include/sub0pipeline/: dsl.hpp  sub0pipeline.hpp
platform/desktop/: CMakeLists.txt  desktop_executor.cpp
platform/esp32p4/: CMakeLists.txt  freertos_executor.cpp
platform/headless/: CMakeLists.txt  sequential_executor.cpp
src/: sub0pipeline.cpp
tests/: CMakeLists.txt  bench_pipeline.cpp  test_concurrent.cpp  test_dsl.cpp  test_failure.cpp  test_helpers.hpp  test_observer.cpp  test_pipeline.cpp  test_validation.cpp
