add_subdirectory(minimal_pipeline)
add_subdirectory(boot_sequence)
add_subdirectory(parallel_tasks)
add_subdirectory(on_demand_jobs)
add_subdirectory(error_handling)
add_subdirectory(validate_dag)
add_subdirectory(observer_profiling)
add_subdirectory(tick_loop)
add_subdirectory(job_options)
add_subdirectory(dsl_operators)
